--- a/views/consumption.handlebars
+++ b/views/consumption.handlebars
@@ -11,7 +11,7 @@
                    <span class="current">Thời Trang Nam</span>  -->
                    <a href="/home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                                            <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                       <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
+                       <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ VAYSHINHAN</a>
                        
                                         <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Vay Tiêu Dùng </span>
@@ -33,7 +33,7 @@
 <div class="content-dichvu">
 <div class="ct-left col-sm-4 col-xs-12">
 <h3 class="title-blue"><img src="/public/image/shinhan_about.jpg" alt="" width="570" height="570" /></h3>
-<h3 class="title-blue">LỢI ÍCH KHI VAY VỐN TẠI SHINHANBANK</h3>
+<h3 class="title-blue">LỢI ÍCH KHI VAY VỐN TẠI VAYSHINHAN</h3>
 </div>
 <div class="ct-right col-sm-8 col-xs-12">
 <div class="tab-expand">
@@ -124,7 +124,7 @@
     </div>
     <ul id="accordion-category" class="product-cat">
           <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-         <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+         <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng vayshinhan </a></li>
 
          <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
        
@@ -140,7 +140,7 @@
    <div class="container">
       <div class="row">
 	     <div class="title-text-vaytindung title-mr-70">
-			        <h2>TẠI SAO NÊN CHỌN Shinhanbank</h2>
+			        <h2>TẠI SAO NÊN CHỌN Vayshinhan</h2>
 			     </div>
 				 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 		   <div class="item equalize">
@@ -183,10 +183,10 @@
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
-<h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
+<h3 class="widget-title">SẢN PHẨM DỊCH VỤ VAYSHINHAN</h3>
 <ul>
       <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng vayshinhan </a></li>
 
      <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
    
