--- a/views/creditcard.handlebars
+++ b/views/creditcard.handlebars
@@ -11,10 +11,10 @@
 					<a href="/home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
 					<span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
 					<a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ
-						SHINHANBANK</a>
+						VAYSHINHAN</a>
 
 					<span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-					<span class="current">thẻ tín dụng shinhanbank </span>
+					<span class="current">thẻ tín dụng vayshinhan </span>
 				</div>
 			</div>
 		</div>
@@ -24,29 +24,29 @@
 	<div class="row" style="margin-top: 13px">
 		<div class="col-md-9 col-sm-12 col-xs-12">
 			<div class="title-text-vaytindung">
-				<h2>thẻ tín dụng shinhanbank </h2>
+				<h2>thẻ tín dụng vayshinhan </h2>
 				<div class="content-dichvu">
 					<div class="main">
 						<div class="width_common">
 							<div class="a-column">
 								<div class="box-detail-new"> 
 									<div class="detail">
-										<p><em><strong>Thẻ tín dụng Shinhan Bank với những tiện ích, ưu đãi tiêu chuẩn
+										<p><em><strong>Thẻ tín dụng VAYSHINHAN với những tiện ích, ưu đãi tiêu chuẩn
 													quốc tế cùng dịch vụ chăm sóc chu đáo ngày càng thu hút khách hàng
 													quan tâm và sử dụng lựa chọn tin dùng. </strong></em></p>
 										<p> </p>
-										<p>Ngân hàng Shinhan Bank với dịch vụ chăm sóc khách hàng cực chu đáo luôn cam
+										<p>Ngân hàng VAYSHINHAN với dịch vụ chăm sóc khách hàng cực chu đáo luôn cam
 											kết đáp ứng các nhu cầu tài chính của khách hàng, đi cùng từng phân khúc
 											khách hàng với những sản phẩm và dịch vụ tài chính chuyên biệt. Đặc biệt
 											các <em><strong><a
 														href="https://topbank.vn/tu-van/lam-the-tin-dung-shinhan-bank-tan-huong-cuc-nhieu-tien-ich"
-														target="_blank" rel="noopener">ưu đãi thẻ tín dụng Shinhanbank
+														target="_blank" rel="noopener">ưu đãi thẻ tín dụng Vayshinhan
 														2019</a> </strong></em>ưu đãi nhất chủ thẻ nên cập nhật thường
 											xuyên để không bỏ lỡ các ưu đãi, tiện ích này. </p>
 										<p> </p>
-										<h2><strong>1. Các loại thẻ tín dụng Shinhan Bank</strong></h2>
+										<h2><strong>1. Các loại thẻ tín dụng VAYSHINHAN</strong></h2>
 										<p> </p>
-										<p>Với<strong> </strong>sản phẩm thẻ tín dụng, Shinhan Bank đưa ra khá nhiều
+										<p>Với<strong> </strong>sản phẩm thẻ tín dụng, VAYSHINHAN đưa ra khá nhiều
 											loại thẻ đa dạng về tính năng ưu đãi cho khách hàng gồm:</p>
 										<p> </p>
 										<ul>
@@ -68,16 +68,16 @@
 													data-class="" data-height="" data-style="" data-width="600" /></a>
 										</p>
 										<p> </p>
-										<p><em>Một số loại thẻ tín dụng Shinhan Bank</em></p>
+										<p><em>Một số loại thẻ tín dụng VAYSHINHAN</em></p>
 										<p> </p>
 										<p><em><strong>&gt;&gt;&gt;&gt; Click ngay: <a
 														href="https://topbank.vn/tu-van/lai-suat-the-tin-dung"
 														target="_blank" rel="noopener">Lãi suất thẻ tín dụng các ngân
 														hàng cập nhật mới nhất năm 2019</a></strong></em></p>
 										<p> </p>
-										<h2><strong>2. Ưu đãi thẻ tín dụng Shinhan Bank</strong></h2>
+										<h2><strong>2. Ưu đãi thẻ tín dụng VAYSHINHAN</strong></h2>
 										<p> </p>
-										<p>Thẻ tín dụng Shinhan Bank có thể dễ dàng khiến khách hàng lựa chọn với các ưu
+										<p>Thẻ tín dụng VAYSHINHAN có thể dễ dàng khiến khách hàng lựa chọn với các ưu
 											đãi cực hấp dẫn như: </p>
 										<p> </p>
 										<h3><em><strong>2.1 Nhận ngay điểm thưởng chào mừng tương đương giá trị phí
@@ -154,7 +154,7 @@
 													data-class="" data-height="" data-style="" data-width="600" /></a>
 										</p>
 										<p> </p>
-										<p><em>Ưu đãi tích lũy dặm bay cùng thẻ tín dụng Shinhanbank</em></p>
+										<p><em>Ưu đãi tích lũy dặm bay cùng thẻ tín dụng vayshinhan</em></p>
 										<p> </p>
 										<h3><strong><em>2.4 Ưu đãi hoàn tiền cực lớn</em></strong></h3>
 										<h3> </h3>
@@ -200,13 +200,13 @@
 										<p><strong>&gt;&gt;&gt;&gt;<em> <a
 														href="https://topbank.vn/dang-ky-mo-the-tin-dung-tai-shinhanbank-ha-noi/thunhap-20tr-pid67"
 														target="_blank" rel="noopener">Click ngay để đăng kí và tiến
-														hành mở thẻ tín dụng Shinhan Bank nhanh chóng
+														hành mở thẻ tín dụng VAYSHINHAN nhanh chóng
 														nhất</a></em></strong></p>
 										<p> </p>
 										<p>Ngoài ra, khách hàng còn được hưởng ưu đãi giảm giá đến 50% tại hơn 100 cửa
 											hàng đối tác Shinhan Zone.</p>
 										<p> </p>
-										<h2><strong>3. Tiện ích sử dụng thẻ tín dụng Shinhan</strong></h2>
+										<h2><strong>3. Tiện ích sử dụng thẻ tín dụng vayshinhan</strong></h2>
 										<p> </p>
 										<p>Khách hàng sở hữu<strong> <em><a
 														href="https://topbank.vn/the-tin-dung-tai-shinhanbank-ha-noi/thu-nhap-20tr/f4"
@@ -215,7 +215,7 @@
 											toán sau với thời gian không tính lãi 45 ngày chi tiêu cùng đẳng cấp thanh
 											toán quốc tế với hơn 33 triệu điểm giao dịch trên toàn cầu. </p>
 										<p> </p>
-										<p>Thêm nữa, khách hàng sử dụng thẻ tín dụng Shinhanbank có thể sử dụng
+										<p>Thêm nữa, khách hàng sử dụng thẻ tín dụng vayshinhan có thể sử dụng
 											các <strong>phương thức thanh toán </strong>cực đa dạng như sau: <br /> </p>
 										<p>- Chuyển khoản từ ngân hàng khác bằng việc cung cấp đầy đủ thông chuyển khoản
 											như: tên người thụ hưởng, tài khoản thụ hưởng, ngân hàng thụ hưởng, số tiền
@@ -229,7 +229,7 @@
 											khi đến ngày hạn thanh toán, khách hàng chỉ cần duy trì số dư trong tài
 											khoản này trước 1 ngày là được. <br /> </p>
 										<p>- Thanh toán tai quầy giao dịch tại bát kì chi nhánh/ phòng giao dịch của
-											ngân hàng Shinhan bank. <br /> </p>
+											ngân hàng VAYSHINHAN. <br /> </p>
 										<p> </p>
 										<p><a href="https://img.topbank.vn/2018/06/18/pXubIXvx/shinhanbank-8b94.jpg"
 												target="_blank" rel="noopener"><img
@@ -238,15 +238,15 @@
 													alt="Làm thẻ tín dụng Shinhan bank - ảnh minh họa" data-class=""
 													data-height="" data-style="" data-width="600" /></a></p>
 										<p> </p>
-										<p><em>Điều kiện và thủ tục làm thẻ tín dụng Shinhanbank</em></p>
+										<p><em>Điều kiện và thủ tục làm thẻ tín dụng VAYSHINHAN</em></p>
 										<p> </p>
-										<h2><strong>4. Điều kiện làm thẻ tín dụng Shinhan Bank</strong></h2>
+										<h2><strong>4. Điều kiện làm thẻ tín dụng VAYSHINHAN</strong></h2>
 										<p> </p>
-										<p>Để làm thẻ tín dụng Shinhan Bank, khách hàng chỉ cần đáp ứng một số điều kiện
+										<p>Để làm thẻ tín dụng VAYSHINHAN, khách hàng chỉ cần đáp ứng một số điều kiện
 											và có thủ tục chứng minh như sau: </p>
 										<p> </p>
 										<p>- Là công dân Việt Nam, hoặc người nước ngoài trên 18 tuổi, phải có tài khoản
-											tiết kiệm hoặc tiền gửi ngân hàng tại Shinhan Bank nếu mở thẻ có tài sản đảm
+											tiết kiệm hoặc tiền gửi ngân hàng tại VAYSHINHAN nếu mở thẻ có tài sản đảm
 											bảo.  Do vậy hồ sơ đăng kí sẽ phải bao gồm cả giấy tờ xác minh nhân thân và
 											địa chỉ cư trú của chủ thẻ.<br /> </p>
 										<p>- Thu nhập bình quân phải đáp ứng mức tối thiểu tại của mỗi loại thẻ, thấp
@@ -254,10 +254,10 @@
 										<p> </p>
 										<p>- Có thêm giấy chứng nhận làm việc 3 tháng trở lên như: hợp đồng lao động,
 											sao kê tài khoản lương, ...<br /> </p>
-										<p>Trên đây là thông tin chi tiết về <strong>Ưu đãi thẻ tín dụng Shinhan bank -
+										<p>Trên đây là thông tin chi tiết về <strong>Ưu đãi thẻ tín dụng VAYSHINHAN -
 												tận hưởng cực nhiều tiện ích</strong> , hi vọng hữu ích với bạn đọc
 											trong việc tham khảo, chuẩn bị giấy tờ cần thiết để tiến hành sử dụng mở thẻ
-											Shinhan bank dễ dàng. Khách hàng có nhu cầu mở thẻ tín dụng Shinhan Bank có
+											VAYSHINHAN dễ dàng. Khách hàng có nhu cầu mở thẻ tín dụng VAYSHINHAN có
 											thể liên hệ trực tiếp với <a href="/home" target="_blank"
 												rel="noopener"><em><strong>vayshinhanbankvn</strong></em></a> qua<strong> hotline </strong>:<a
 												class="blue-clr" href="tel: 0707183645" target="_blank"
@@ -287,7 +287,7 @@
 				</div>
 				<ul id="accordion-category" class="product-cat">
 					<li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-					<li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+					<li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng vayshinhan </a></li>
 					<li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công
 							Nhân và Tự Doanh</a></li>
 
@@ -303,7 +303,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="title-text-vaytindung title-mr-70">
-				<h2>TẠI SAO NÊN CHỌN Shinhanbank</h2>
+				<h2>TẠI SAO NÊN CHỌN VAYSHINHAN</h2>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 				<div class="item equalize">
@@ -347,10 +347,10 @@
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6">
-				<h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
+				<h3 class="widget-title">SẢN PHẨM DỊCH VỤ VAYSHINHAN</h3>
 				<ul>
 					<li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-					<li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+					<li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng vayshinhan </a></li>
 					<li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công
 							Nhân và Tự Doanh</a></li>
 
