--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -20,7 +20,7 @@
     <div class="row wrap-home">
         <div class="col-lg-12">
             <div class="title-text-vaytindung">
-                <h2>CÁC SẢN PHẨM VAY TÍN CHẤP TIÊU DÙNG SHINHANBANK</h2>
+                <h2>CÁC SẢN PHẨM VAY TÍN CHẤP TIÊU DÙNG VAYSHINHAN</h2>
             </div>
             <div class="wrap-item-home">
                 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
@@ -31,7 +31,7 @@
                             <div class="title">
                                 Vay Tiêu Dùng </div>
                             <div class="intro">
-                                Vay tiêu dùng shinhanbank lãi suất cực kì ưu đãi chỉ từ 0.6% không thẩm định nhà. </div>
+                                Vay tiêu dùng vayshinhan lãi suất cực kì ưu đãi chỉ từ 0.6% không thẩm định nhà. </div>
 
                         </div>
                     </a>
@@ -43,9 +43,9 @@
                             <img src="/public/image/c83ecd8d31c050cf081e159111e7a696.jfif"
                                 alt="">
                             <div class="title">
-                                thẻ tín dụng shinhanbank </div>
+                                thẻ tín dụng vayshinhan </div>
                             <div class="intro">
-                                thẻ tín dụng shinhanbank với nhiều ưu đãi bất ngờ cực sốc dành cho các chủ sở hữu </div>
+                                thẻ tín dụng vayshinhan với nhiều ưu đãi bất ngờ cực sốc dành cho các chủ sở hữu </div>
 
                         </div>
                     </a>
@@ -305,7 +305,7 @@
     <div class="container">
         <div class="row">
             <div class="title-text-vaytindung title-mr-70">
-                <h2>TẠI SAO NÊN CHỌN SHINHANBANK</h2>
+                <h2>TẠI SAO NÊN CHỌN VAYSHINHAN</h2>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
                 <div class="item equalize">
@@ -349,11 +349,11 @@
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
-                <h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
+                <h3 class="widget-title">SẢN PHẨM DỊCH VỤ VAYSHINHAN</h3>
                 <ul>
                     <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
                     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng
-                            shinhanbank </a></li>
+                            vayshinhan </a></li>
                     <li><a href="/vay-the-chap-nha-dat">Vay Thế Chấp Nhà
                             đất</a></li>
                     <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công
