--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -107,7 +107,7 @@ Giới Thiệu
 </a>
 </li>
 <li>
-    <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK &nbsp<i class="fa fa-chevron-down" aria-hidden="true"></i>
+    <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ VAYSHINHAN &nbsp<i class="fa fa-chevron-down" aria-hidden="true"></i>
 </a>
               <ul class="dropdown">
                       <li>
@@ -116,7 +116,7 @@ Giới Thiệu
             </li>
                     <li>
             <a href="/the-tin-dung-shinhanbank">
-            thẻ tín dụng shinhanbank             </a>
+            thẻ tín dụng vayshinhan             </a>
             </li>
                     <li>
             <a href="/ho-tro-cong-nhan-va-tu-doanh">
@@ -174,7 +174,7 @@ Liên Hệ
         
         </li>
                 <li>
-            <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
+            <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ VAYSHINHAN</a>
                               <ul>
                                       <li>
                     <a href="/vay-tieu-dung>">
@@ -182,7 +182,7 @@ Liên Hệ
                     </li>
                                     <li>
                     <a href="/the-tin-dung-shinhanbank>">
-                    thẻ tín dụng shinhanbank                     </a>
+                    thẻ tín dụng vayshinhan                     </a>
                     </li>
                                     <li>
                     <a href="/ho-tro-cong-nhan-va-tu-doanh">
