--- a/views/support.handlebars
+++ b/views/support.handlebars
@@ -10,7 +10,7 @@
                    <span class="current">Thời Trang Nam</span>  -->
                    <a href="/home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                                            <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                       <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
+                       <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ VAYSHINHAN</a>
                        
                                         <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Hỗ Trợ Công Nhân và Tự Doanh</span>
@@ -50,7 +50,7 @@
 <li> </li>
 </ul>
 <p><img src="/ho-tro-cong-nhan-va-tu-doanh/../../source/hinh%20anh%20shinhan%20(1).jpg" alt="hinh anh shinhan (1)" width="574" height="337" /></p>
-<p>Nhanh Tay Đăng Kí Ngay để được Ngân Hàng Shinhanbank hỗ trợ </p>
+<p>Nhanh Tay Đăng Kí Ngay để được Ngân Hàng Vayshinhan hỗ trợ </p>
 <p>Liên Hệ : Mr.Bằng SĐT :0707183645 , Zalo : 0707183645</p>
 <p><a href="../../"><span style="color: #3598db;"><strong>BẤM VÀO ĐÂY ĐỂ ĐĂNG KÍ KHOẢN VAY</strong></span></a></p>
 </div>					</div>
@@ -64,7 +64,7 @@
     </div>
     <ul id="accordion-category" class="product-cat">
           <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-         <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+         <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng vayshinhan </a></li>
 
          <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
        
@@ -79,7 +79,7 @@
    <div class="container">
       <div class="row">
 	     <div class="title-text-vaytindung title-mr-70">
-			        <h2>TẠI SAO NÊN CHỌN Shinhanbank</h2>
+			        <h2>TẠI SAO NÊN CHỌN VAYSHINHAN</h2>
 			     </div>
 				 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 		   <div class="item equalize">
@@ -122,10 +122,10 @@
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
-<h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
+<h3 class="widget-title">SẢN PHẨM DỊCH VỤ VAYSHINHAN</h3>
 <ul>
       <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng vayshinhan </a></li>
 
      <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
    
