--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -74,7 +74,7 @@ background: linear-gradient(to right, #5B86E5, #36D1DC); /* W3C, IE 10+/ Edge, F
    <div class="container">
       <div class="row">
 	     <div class="title-text-vaytindung title-mr-70">
-			        <h2>TẠI SAO NÊN CHỌN Shinhanbank</h2>
+			        <h2>TẠI SAO NÊN CHỌN Vayshinhan</h2>
 			     </div>
 				 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 		   <div class="item equalize">
@@ -117,10 +117,10 @@ background: linear-gradient(to right, #5B86E5, #36D1DC); /* W3C, IE 10+/ Edge, F
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
-<h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
+<h3 class="widget-title">SẢN PHẨM DỊCH VỤ VAYSHINHAN</h3>
 <ul>
       <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng vayshinhan </a></li>
 
      <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
    
