--- a/views/infor.handlebars
+++ b/views/infor.handlebars
@@ -47,7 +47,7 @@
     </div>
     <ul id="accordion-category" class="product-cat">
           <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-         <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+         <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng vayshinhan </a></li>
 
          <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
        
@@ -62,7 +62,7 @@
    <div class="container">
       <div class="row">
 	     <div class="title-text-vaytindung title-mr-70">
-			        <h2>TẠI SAO NÊN CHỌN Shinhanbank</h2>
+			        <h2>TẠI SAO NÊN CHỌN VAYSHINHAN</h2>
 			     </div>
 				 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 		   <div class="item equalize">
@@ -104,10 +104,10 @@
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
-<h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
+<h3 class="widget-title">SẢN PHẨM DỊCH VỤ VAYSHINHAN</h3>
 <ul>
       <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng vayshinhan </a></li>
 
      <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
    
