--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
 <link rel="stylesheet" href="/public/css/owl.theme.css" type="text/css">
 <link rel="shortcut icon" href="/public/image/d03043f4108131a3e2744d472056fe70.png" type="image/x-icon" />
 <!-- css new -->
+<link rel="stylesheet" href="/public/css/a6a15.css" type="text/css"> 
  <link rel="stylesheet" href="/public/css/bootstrap.min.css" type="text/css">
 <link rel="stylesheet" href="/public/css/bootstrap-select.min.css" type="text/css">
 
@@ -41,6 +42,8 @@
 <link rel="stylesheet" href="/public/css/styles.css" type="text/css">
 <link rel="stylesheet" href="/public/css/responsive.css" type="text/css">
 <link rel="stylesheet" href="/public/css/navmobile.css" type="text/css"> 
+
+<link rel="stylesheet" href="/public/css/ie-fallback.css" type="text/css"> 
 <script type="text/javascript" src="/public/js/jquery-min.js"></script>
 
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -95,7 +98,6 @@
 <div class="navbar-collapse collapse">
 
 <ul class="nav navbar-nav">
-
 <li>
 <a href="home">Trang Chủ </a>
 
@@ -106,26 +108,6 @@
 Giới Thiệu
 </a>
 </li>
-<li>
-    <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ VAYSHINHAN &nbsp<i class="fa fa-chevron-down" aria-hidden="true"></i>
-</a>
-              <ul class="dropdown">
-                      <li>
-            <a href="/vay-tieu-dung">
-            Vay Tiêu Dùng             </a>
-            </li>
-                    <li>
-            <a href="/the-tin-dung-shinhanbank">
-            thẻ tín dụng vayshinhan             </a>
-            </li>
-                    <li>
-            <a href="/ho-tro-cong-nhan-va-tu-doanh">
-            Hỗ Trợ Công Nhân và Tự Doanh            </a>
-            </li>
-                 </ul>
-    </li>
-
-
 
 <li>
 <a href="lien-he">
@@ -220,7 +202,8 @@ Liên Hệ
  <script type="text/javascript" src="/public/js/owl.carousel.min.js"></script>
 <script type="text/javascript" src="/public/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/public/js/bootstrap-select.min.js"></script>
-
+<script type="text/javascript" src="/public/js/0e8d1.js"></script>
+<script type="text/javascript" src="/public/js/bootstrap-select.min.js"></script>
 <!--<script type="text/javascript" src="js/ion.rangeSlider.js"></script> tam thoi ẩn-->
 <script type="text/javascript" src="/public/js/jquery.themepunch.revolution.min.js"></script>
 <script type="text/javascript" src="/public/js/jquery.themepunch.tools.min.js"></script>
