--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
  <link rel="stylesheet" href="/public/css/bootstrap.min.css" type="text/css">
 <link rel="stylesheet" href="/public/css/bootstrap-select.min.css" type="text/css">
 <link rel="stylesheet" href="/public/css/a6a15.css" type="text/css"> 
-<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 <link rel="stylesheet" href="/public/css/line-icons.css" type="text/css">
 <link rel="stylesheet" href="/public/css/animate.css" type="text/css">
