--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -596,7 +596,9 @@
                                                                         <div class="elementor-icon-box-content">
                                                                             <h3 class="elementor-icon-box-title">
                                                                             </h3>
-                                                                            <p class="elementor-icon-box-description">Thu nhập tối thiểu 4.5 triệu đồng/tháng</p>
+                                                                            <p class="elementor-icon-box-description">
+                                                                                Thu nhập tối thiểu 4.5 triệu đồng/tháng
+                                                                            </p>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -650,7 +652,9 @@
                                                                         <div class="elementor-icon-box-content">
                                                                             <h3 class="elementor-icon-box-title">
                                                                             </h3>
-                                                                            <p class="elementor-icon-box-description">Đi làm hưởng lương: Từ 21 đến 55 tuổi (nữ) và 21 đến 58 tuổi (nam)​</p>
+                                                                            <p class="elementor-icon-box-description">Đi
+                                                                                làm hưởng lương: Từ 21 đến 55 tuổi (nữ)
+                                                                                và 21 đến 58 tuổi (nam)​</p>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -688,7 +692,8 @@
                                                                                                     d="M545.7,322.42c21.675-5.1,34.425-28.05,29.324-49.725l-36.975-145.35l-318.75,81.6h215.475     c43.351,0,79.051,35.7,79.051,79.05v43.351L545.7,322.42z">
                                                                                                 </path>
                                                                                                 <path
-                                                                                                    d="M474.3,287.995c0-22.95-17.85-40.8-40.8-40.8H43.35c-22.95,0-40.8,17.85-40.8,40.8v249.9c0,22.95,17.85,40.8,40.8,40.8     H433.5c22.95,0,40.8-17.85,40.8-40.8V287.995z M47.175,317.32c0-10.2,8.925-19.125,19.125-19.125h216.75     c10.2,0,19.125,8.925,19.125,19.125s-8.925,19.125-19.125,19.125H66.3C56.1,336.445,47.175,327.521,47.175,317.32z      M293.25,541.721c-35.7,0-65.025-29.325-65.025-65.025s29.325-63.75,65.025-63.75s65.024,29.325,65.024,65.025     C358.274,513.67,328.95,541.721,293.25,541.721z M433.5,477.971c0,35.699-29.325,65.024-65.025,65.024     c-3.825,0-8.925,0-12.75-1.274c16.575-16.575,25.5-38.25,25.5-63.75s-10.2-47.176-25.5-63.75c3.825-1.275,7.65-1.275,12.75-1.275     C405.45,412.945,433.5,442.271,433.5,477.971z"></path>
+                                                                                                    d="M474.3,287.995c0-22.95-17.85-40.8-40.8-40.8H43.35c-22.95,0-40.8,17.85-40.8,40.8v249.9c0,22.95,17.85,40.8,40.8,40.8     H433.5c22.95,0,40.8-17.85,40.8-40.8V287.995z M47.175,317.32c0-10.2,8.925-19.125,19.125-19.125h216.75     c10.2,0,19.125,8.925,19.125,19.125s-8.925,19.125-19.125,19.125H66.3C56.1,336.445,47.175,327.521,47.175,317.32z      M293.25,541.721c-35.7,0-65.025-29.325-65.025-65.025s29.325-63.75,65.025-63.75s65.024,29.325,65.024,65.025     C358.274,513.67,328.95,541.721,293.25,541.721z M433.5,477.971c0,35.699-29.325,65.024-65.025,65.024     c-3.825,0-8.925,0-12.75-1.274c16.575-16.575,25.5-38.25,25.5-63.75s-10.2-47.176-25.5-63.75c3.825-1.275,7.65-1.275,12.75-1.275     C405.45,412.945,433.5,442.271,433.5,477.971z">
+                                                                                                </path>
                                                                                                 </path>
                                                                                             </g>
                                                                                         </g>
@@ -728,7 +733,15 @@
                                                                         <div class="elementor-icon-box-content">
                                                                             <h3 class="elementor-icon-box-title">
                                                                             </h3>
-                                                                            <p class="elementor-icon-box-description">Sinh sống tại TP. HCM, Hà Nội, Đà Nẵng, Hưng Yên, Bình Dương, Hải Dương, Bắc Ninh, và một số huyện Đồng Nai, Long An, Bà Rịa - Vũng Tàu, Quảng Nam, Vĩnh Phúc, Khánh Hòa, Quãng Ngãi, Cần Thơ, Vĩnh Long, Hậu Giang, Bình Định, Thái Nguyên, Bắc Giang, Thanh Hóa, Nam Định, Thừa Thiên Huế, Tiền Giang, Bến Tre.</p>
+                                                                            <p class="elementor-icon-box-description">
+                                                                                Sinh sống tại TP. HCM, Hà Nội, Đà Nẵng,
+                                                                                Hưng Yên, Bình Dương, Hải Dương, Bắc
+                                                                                Ninh, và một số huyện Đồng Nai, Long An,
+                                                                                Bà Rịa - Vũng Tàu, Quảng Nam, Vĩnh Phúc,
+                                                                                Khánh Hòa, Quãng Ngãi, Cần Thơ, Vĩnh
+                                                                                Long, Hậu Giang, Bình Định, Thái Nguyên,
+                                                                                Bắc Giang, Thanh Hóa, Nam Định, Thừa
+                                                                                Thiên Huế, Tiền Giang, Bến Tre.</p>
                                                                         </div>
                                                                     </div>
                                                                 </div>
