--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,9 +21,11 @@
 <link rel="stylesheet" href="/public/css/owl.carousel.css" type="text/css">
 <link rel="stylesheet" href="/public/css/owl.theme.css" type="text/css">
 <link rel="shortcut icon" href="/public/image/d03043f4108131a3e2744d472056fe70.png" type="image/x-icon" />
-<!-- css new -->
+<!-- css new 
  <link rel="stylesheet" href="/public/css/bootstrap.min.css" type="text/css">
-<link rel="stylesheet" href="/public/css/bootstrap-select.min.css" type="text/css">
+<link rel="stylesheet" href="/public/css/bootstrap-select.min.css" type="text/css">-->
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 <link rel="stylesheet" href="/public/css/a6a15.css" type="text/css"> 
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
